Fix room tile text clipping (#11196)

--- a/res/css/views/rooms/_RoomTile.pcss
+++ b/res/css/views/rooms/_RoomTile.pcss
@@ -60,7 +60,9 @@ limitations under the License.
             color: $secondary-content;
             display: flex;
             gap: $spacing-4;
-            line-height: 1.2;
+            line-height: 1.25;
+            position: relative;
+            top: -1px;
         }
 
         .mx_RoomTile_title,
@@ -72,7 +74,7 @@ limitations under the License.
 
         .mx_RoomTile_title {
             font: var(--cpd-font-body-md-regular);
-            line-height: 1;
+            line-height: 1.25;
 
             &.mx_RoomTile_titleHasUnreadEvents {
                 font-weight: var(--cpd-font-weight-semibold);
@@ -81,7 +83,6 @@ limitations under the License.
 
         .mx_RoomTile_titleWithSubtitle {
             margin-top: -2px; /* shift the title up a bit more */
-            margin-bottom: 1px;
         }
     }
 
